--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,7 @@ html {
   margin: 0;
   padding: 0;
 }
-.logo {
-  font-size: 26px;
-  font-family: "Raleway", serif;
-  color: var(--secondary-text-colour);
-  margin-right: 93px;
-}
+
 footer .logo {
   color: #fff;
 }
@@ -46,6 +41,16 @@ body,
 header {
   font-family: "Roboto", sans-serif;
   color: var(--primary-text-colour);
+}
+a:not(.modal__contract-checkbox-link) {
+  color: inherit;
+  text-decoration: none;
+}
+header .logo {
+  font-size: 26px;
+  font-family: "Raleway", serif;
+  color: var(--secondary-text-colour);
+  margin-right: 93px;
 }
 
 .nav,
@@ -151,9 +156,17 @@ a:active {
   color: var(--background-colour);
   border-radius: 4px;
   border: 0;
-}
-.index-hero-button {
-  padding: 10px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+  letter-spacing: 0.06em;
 }
 
 .qualities {
@@ -172,6 +185,7 @@ a:active {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+  color: var(--primary-text-colour);
 }
 
 .section-header {
@@ -222,11 +236,6 @@ a:active {
   padding: 8px 22px;
   transition: background-color var(--transition-time) var(--transition-timing-function),
     color var(--transition-time) var(--transition-timing-function), box-shadow var(--transition-time) var(--transition-timing-function);
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
 }
 
 .footer span {
@@ -582,8 +591,6 @@ address {
 }
 .modal {
   position: absolute;
-  display: flex;
-  justify-content: flex-end;
 
   top: 50%;
   left: 50%;
@@ -641,10 +648,7 @@ address {
 
 .footer-signup__button {
   margin-left: 12px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -669,4 +673,82 @@ address {
   line-height: 1.15;
   letter-spacing: 0.03em;
   text-align: center;
+  margin-bottom: 12px;
+}
+
+.modal,
+.modal-textarea::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  text-align: left;
+}
+.modal__contract-checkbox {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.modal__contract-checkbox-link {
+  text-decoration: underline;
+}
+
+.modal-textarea {
+  resize: none;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.modal-input__container {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.modal-label {
+  margin-bottom: 4px;
+}
+.modal-human__icon {
+  position: absolute;
+
+  width: 12px;
+  height: 12px;
+  transition: fill var(--transition-time) var(--transition-timing-function);
+}
+.modal-phone__icon {
+  position: absolute;
+
+  width: 13px;
+  height: 13px;
+  transition: fill var(--transition-time) var(--transition-timing-function);
+}
+
+.modal-email__icon {
+  position: absolute;
+
+  width: 15px;
+  height: 12px;
+  transition: fill var(--transition-time) var(--transition-timing-function);
+}
+.modal-submit__button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.modal-checkbox__submit {
+  margin-bottom: 30px;
+}
+
+.modal-input__container:hover svg,
+.modal-input__container:focus svg,
+.modal-input__container:focus,
+.modal-input__container:hover {
+  fill: var(--buttons-links-colour);
+  border-color: var(--buttons-links-colour);
 }
