--- a/css/style.css
+++ b/css/style.css
@@ -699,6 +699,7 @@ address {
 }
 
 .modal-textarea {
+  width: 448px;
   resize: none;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -713,6 +714,10 @@ address {
 }
 .modal-label {
   margin-bottom: 4px;
+}
+.modal-icon {
+  bottom: 14px;
+  left: 13px;
 }
 .modal-human__icon {
   position: absolute;
@@ -756,4 +761,6 @@ address {
 .modal-input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  padding-left: 10px;
+  height: 40px;
 }
