--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,14 @@ a:not(.modal__contract-checkbox-link) {
   color: inherit;
   text-decoration: none;
 }
-header .logo {
+.logo {
   font-size: 26px;
   font-family: "Raleway", serif;
   color: var(--secondary-text-colour);
   margin-right: 93px;
+}
+header .header-logo {
+  color: #212121;
 }
 
 .nav,
@@ -405,6 +408,9 @@ address {
 .clients-section {
   padding-top: 94px;
 }
+.footer-newsletter {
+  margin-left: 93px;
+}
 .footer-header {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -423,8 +429,10 @@ address {
 .footer-section__whole,
 .section__social-network {
   display: flex;
-  justify-content: space-between;
   align-items: baseline;
+}
+.social-network {
+  margin-left: 70px;
 }
 
 .social-network__icon-svg {
@@ -635,11 +643,10 @@ address {
 }
 
 .footer_form-button {
-  display: flex;
+  display: inline-flex;
   margin-top: 20px;
 }
 .footer-email__form {
-  display: block;
   max-height: 50px;
   max-width: 358px;
 }
@@ -654,6 +661,20 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.footer-input {
+  width: 358px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #2f303a;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.footer-input::placeholder {
+  padding-left: 16px;
 }
 .footer-form__icon {
   width: 24px;
@@ -704,6 +725,7 @@ address {
   width: 448px;
   resize: none;
   padding: 12px 16px;
+  margin-bottom: 25px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border-color var(--transition-time) var(--transition-timing-function);
@@ -713,40 +735,18 @@ address {
 
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
 }
 .modal-label {
   margin-bottom: 4px;
 }
+
 .modal-icon {
-  top: 50%;
+  position: absolute;
+  top: 40%;
   left: 13px;
-}
-.modal-human__icon {
-  position: absolute;
-
-  width: 12px;
-  height: 12px;
+  width: 18px;
+  height: 18px;
   transition: fill var(--transition-time) var(--transition-timing-function);
-}
-.modal-phone__icon {
-  position: absolute;
-
-  width: 13px;
-  height: 13px;
-  transition: fill var(--transition-time) var(--transition-timing-function);
-}
-
-.modal-email__icon {
-  position: absolute;
-
-  width: 15px;
-  height: 12px;
-  transition: fill var(--transition-time) var(--transition-timing-function);
-}
-
-.modal-submit__button:hover,
-.modal-submit__button:focus {
 }
 
 .modal-submit__button {
@@ -754,8 +754,32 @@ address {
   margin-left: auto;
   margin-right: auto;
 }
+
+.custom-checkbox {
+  position: absolute;
+  left: 0;
+  bottom: 5px;
+  display: block;
+  width: 16px;
+  height: 15px;
+  border: 3px solid #212121;
+  border-radius: 3px;
+}
+
+.modal-checkbox__input:checked + .custom-checkbox {
+  border-color: var(--buttons-links-colour);
+  background-image: url(../images/images-homework-6/Vector.svg);
+  background-color: var(--buttons-links-colour);
+  background-size: auto;
+}
+
 .modal-checkbox__submit {
+  position: relative;
+
+  padding-left: 30px;
   margin-bottom: 30px;
+  display: flex;
+  align-items: center;
 }
 
 .modal-input__container:focus svg,
@@ -771,7 +795,13 @@ address {
 .modal-input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  padding-left: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
   height: 40px;
+  margin-bottom: 10px;
   transition: border-color var(--transition-time) var(--transition-timing-function);
+}
+
+.modal-checkbox__input {
+  appearance: none;
 }
