--- a/css/style.css
+++ b/css/style.css
@@ -757,12 +757,12 @@ address {
 
 .custom-checkbox {
   position: absolute;
-  left: 0;
+  left: 10px;
   bottom: 5px;
   display: block;
   width: 16px;
   height: 15px;
-  border: 3px solid #212121;
+  border: 2px solid #212121;
   border-radius: 3px;
 }
 
