--- a/css/style.css
+++ b/css/style.css
@@ -778,11 +778,14 @@ address {
   line-height: 1.14;
 
   letter-spacing: 0.01em;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-icon {
   position: absolute;
-  top: 40%;
+  top: 50%;
+  transform: translateY(-50%);
   left: 13px;
   width: 18px;
   height: 18px;
@@ -836,7 +839,6 @@ address {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 40px;
-  padding-right: 40px;
   height: 40px;
   margin-bottom: 10px;
   transition: border-color var(--transition-time) var(--transition-timing-function);
